test/arrays/bradc/errors/badArrArgErrMsg.good
badArrArgErrMsg.chpl:6: error: unresolved call 'foo([domain(1,int(64),one)] complex(128))'
badArrArgErrMsg.chpl:8: note: this candidate did not match: foo(X: [?Dlocal] real)
badArrArgErrMsg.chpl:8: note: because an argument was incompatible
